--- a/lib/sdl/CMakeLists.txt
+++ b/lib/sdl/CMakeLists.txt
@@ -92,15 +92,23 @@ if(NOT _sdl2_library OR NOT SDL2_FOUND)
 endif()
 
 add_library(sdl-backend ${HEADERS} ${SRC})
+add_library(sdl-server ${HEADERS} ${SRC})
+target_compile_definitions(sdl-server PRIVATE SERVER)
+
 if(WZ_TARGET_ADDITIONAL_PROPERTIES)
 	SET_TARGET_PROPERTIES(sdl-backend PROPERTIES ${WZ_TARGET_ADDITIONAL_PROPERTIES})
+	SET_TARGET_PROPERTIES(sdl-server PROPERTIES ${WZ_TARGET_ADDITIONAL_PROPERTIES})
 endif()
 
 target_link_libraries(sdl-backend PRIVATE framework)
+target_link_libraries(sdl-server PRIVATE framework)
 set_property(TARGET sdl-backend PROPERTY FOLDER "lib")
+set_property(TARGET sdl-server PROPERTY FOLDER "lib")
 message( STATUS "Linking to SDL2 library: ${_sdl2_library}" )
 target_link_libraries(sdl-backend PRIVATE ${_sdl2_library})
 target_include_directories(sdl-backend PRIVATE "${_sdl2_include_dir}")
+target_link_libraries(sdl-server PRIVATE ${_sdl2_library})
+target_include_directories(sdl-server PRIVATE "${_sdl2_include_dir}")
 
 if(CMAKE_SYSTEM_NAME MATCHES "Windows")
 	if("${_sdl2_main_library}" STREQUAL "")
@@ -110,12 +118,15 @@ endif()
 if(_sdl2_main_library)
 	message( STATUS "Main target should link to SDL2Main: ${_sdl2_main_library}" )
 	target_link_libraries(sdl-backend INTERFACE ${_sdl2_main_library})
+	target_link_libraries(sdl-server INTERFACE ${_sdl2_main_library})
 else()
 	message( STATUS "Not linking to SDL2Main" )
 endif()
 
 target_link_libraries(sdl-backend PRIVATE Qt5::Core Qt5::Widgets)
+target_link_libraries(sdl-server PRIVATE Qt5::Core Qt5::Widgets)
 
 if((CMAKE_SYSTEM_NAME MATCHES "Windows") AND ("${CMAKE_CXX_COMPILER_ID}" MATCHES "GNU") AND ${CMAKE_CROSSCOMPILING})
-    target_compile_definitions(sdl-backend PRIVATE "QT_STATICPLUGIN")
+	target_compile_definitions(sdl-backend PRIVATE "QT_STATICPLUGIN")
+	target_compile_definitions(sdl-server PRIVATE "QT_STATICPLUGIN")
 endif()
